feat/add-vercel

--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "scripts.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "test": "mochapack 'test/**/*.js'",
     "predeploy": "npm run build", 
-		"deploy": "gh-pages -d dist",
-    "start": "webpack serve",
-    "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
+		"deploy": "gh-pages -d dist"
   },
   "author": "Turing School of Software and Design",
   "license": "MIT",
@@ -34,14 +32,9 @@
     "interactjs": "^1.10.19",
     "js-datepicker": "^5.18.2"
   },
-  {
 	"homepage": "https://amysiu1028.github.io/FitLit", 
-  "name": "FitLit", 
-  "version": "2.0.0",
-  "description": "Project starter kit using webpack, mocha, chai, and SCSS/SASS enabled", 
-  "main": "src/scripts.js", 
   "repository": { 
     "type": "git",
-    "url": "git+https://github.com/amysiu1028/FitLit.git" 
-},
+    "url": "git+https://github.com/amysiu1028/FitLit.git" }
+}
   
