--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "builds": [{ "src": "webpack.config.js", "use": "@vercel/static-build" }],
+  "output": {
+    "public": "dist"
+  },
     "routes": [
       { "src": "/(.*)", "dest": "/" }
     ]
