--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "output": {
-    "public": "dist"
-  },
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
+  "buildCommand": "next build",
+  "builds": [{ "src": "webpack.config.js", "use": "@vercel/static-build" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
   }
